--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
             <form id="form">
-                <h2>Register with us</h2>
+                <h2>Register</h2>
                 <div class="form-control">
                     <label for="username">Username</label>
                     <input type="text" id="username" placeholder="Enter your username">
